# pdf-split

./: .gitignore  LICENSE  README.md  pyproject.toml  test_size.py
src/pdf_splitter/: __init__.py  cli.py  splitter.py
